# users_manager_api

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  run.py
migrations/versions/: 96733fd59b8b_initial_migration.py
src/app/: __init__.py  modles.py  routes.py  schemas.py
src/config/: settings.py  swagger_config.py
src/database/validators/: users_validators.py
static/: swagger.json
tests/: test_d.py
