[project]
name = "users-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladyslav",email = "vlados.soc@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "(>=3.1.0,<4.0.0)"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
